Linked detail_blog.css to detail_blog.html and corrected the look of 'blog-detail'; fixed inanimate state of 'jump to content' arrow  at 'blog-detail'

--- a/static/sni_app/css/detail_blog.css
+++ b/static/sni_app/css/detail_blog.css
@@ -1,5 +1,5 @@
 html,
-body {
+html body {
     background: rgb(255, 255, 255, 0);
     overflow-x: hidden;
     scroll-behavior: smooth;
@@ -20,7 +20,7 @@ body {
     }
 }
 
-#hero {
+section#hero {
     top: -100px;
     background-size: cover;
     height: fit-content;
@@ -82,7 +82,7 @@ body {
     color: #002657;
 }
 
-#jump-to-content svg {
+#jump-to-content i {
     margin: 20px auto auto auto;
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
